[package]
name = "little_web"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "A sample web framework for Rust"
authors = ["shaohua.xia <2671309770@qq.com>"]
repository = "https://github.com/xiashaohua/little_web.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
dyn-clone = "1.0.11"
